@@ -2,6 +2,9 @@
 
 	* src/synce-device-manager.c - fix typo assignment
 	  instead of comparison, thanks to Karl Relton
+	* scripts/{85-synce.rules.in,udev-synce-serial.in} - move
+	  logic for dealing with 2 endpoint serial devices from
+	  python script to udev rules, thanks to Karl Relton
 
 2010-06-30  Mark Ellis  <mark@mpellis.org.uk>
 
